--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack-dev-server --hot --inline"
+    "dev:server": "NODE_ENV='DEV' ./node_modules/.bin/webpack-dev-server --hot --inline",
+    "prod:server": "NODE_ENV='PROD' ./node_modules/.bin/webpack-dev-server --hot --inline",
+    "prod:build": "NODE_ENV='PROD' ./node_modules/.bin/webpack"
   },
   "keywords": [
     "simple",
